# MyParlai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py  parlay.py  sports_data.py
src/analysis/: __init__.py  factors.py  predictor.py
src/cli/: __init__.py  main.py
src/models/: __init__.py  injury.py  matchup.py  parlay.py  player.py  sport.py  team.py  weather.py
src/services/: __init__.py  odds_service.py  sports_data.py  weather_service.py
tests/: __init__.py  test_analysis.py  test_cli.py  test_models.py  test_parlay.py  test_services.py  test_sports_data.py
